--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-image = "0.25.1"
-minifb = "0.25.0"
-rand = "0.8"
+time = "0.3"
+iced = { git = "https://github.com/iced-rs/iced.git", features = [
+    "image",
+    "tokio",
+    "debug",
+] }
 
 [profile.release]
 debug = false
