--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 rfd = "0.14.1"
 time = "0.3"
+tokio = { version = "1", features = ["full"] }
 iced = { git = "https://github.com/iced-rs/iced.git", features = [
     "image",
     "tokio",
