--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ iced = { git = "https://github.com/iced-rs/iced.git", features = [
     "tokio",
     "debug",
 ] }
+cpal = "0.15.3"
+anyhow = "1"
 
 [profile.release]
 debug = false
